--- a/package.json
+++ b/package.json
@@ -46,7 +46,10 @@
             {
                 "language": "pegjs",
                 "scopeName": "source.pegjs",
-                "path": "./syntaxes/pegjs.json"
+                "path": "./syntaxes/pegjs.json",
+                "embeddedLanguages": {
+                    "meta.embedded.block.javascript": "javascript"
+                }
             }
         ],
         "snippets": [
